--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: rgb(0,107,232);">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+            <div class=" text-white min-vh-100">
                 <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <span class="h3 fw-bold  text-light p-4">PATHOBOT</span>
                 </div>
-                <ul class="nav flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a class="nav-link" [routerLink]="['home']">
-                            <i class="fa fa-home text-light" aria-hidden="true"></i> <span
-                                class="ms-1 d-none d-sm-inline text-white">Home</span>
+                <div class="drawer">
+                    <div class="drawerList">
+                        <a [routerLink]="['home']">
+                            <i class="fa fa-home" aria-hidden="true"></i> <span
+                                class="ms-1 d-none d-sm-inline ">Home</span>
                         </a>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-10">
