--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
                 </div>
                 <div class="drawer">
                     <div class="drawerList">
-                        <a [routerLink]="['home']">
-                            <i class="fa fa-home" aria-hidden="true"></i> <span
-                                class="ms-1 d-none d-sm-inline ">Home</span>
+                        <a class="d-flex p-2" [routerLink]="['home']">
+                            <i class="fa fa-home pt-1" aria-hidden="true"></i>
+                            <div class="mx-2">Home</div>
                         </a>
                     </div>
                 </div>
